--- a/ch07/town_hall/index.html
+++ b/ch07/town_hall/index.html
@@ -19,10 +19,27 @@
 	<nav class="navbar">
 		<ul class="menu">
 			<li> <a href="#navbar">Home</a> </li>
-			<li> <a href="#">Speakers</a></li>
+
+			<li> 
+				<a href="#">Speakers<small>&#9660;</small></a>
+				<ul class="submenu">
+					<li><a href="speakers/brancaccio.html">David Branncaccio</a></li>
+					<li><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></li>
+					<li><a href="speakers/chua.html">Amy Chua</a></li>
+					<li><a href="speakers/sampson.html">Scott Sampson</a></li>
+				</ul>
+			</li>
 			<li> <a href="#">Luncheons</a></li>
 			<li> <a href="#">Tickets</a></li>
-			<li> <a href="#">About Us</a></li>
+			<li> 
+				<a href="#">About Us <small>&#9660;</small></a>
+				<ul class="submenu">
+					<li><a href="#">Our History</a></li>
+					<li><a href="#">Board of Directors</a></li>
+					<li><a href="#">Past Speakers</a></li>
+					<li><a href="#">Contact Us</a></li>
+				</ul>
+			</li>
 		</ul>
 
 	</nav>
