--- a/ch12/town_hall/tickets.html
+++ b/ch12/town_hall/tickets.html
@@ -57,7 +57,7 @@
 		</aside>
 		<section>
 			<h1>Order Form</h1>
-			<form action="order_tickets.html" method="post">
+			<form action="order_tickets.html" method="get">
 				<fieldset>
 					<legend>Member Information</legend>
 					
